# nanoG1SimToReal

./: .dockerignore  .gitignore  Dockerfile.artifacts  Dockerfile.artifacts-small  Dockerfile.spark  README.md  RESULTS.md  eval.py  pyproject.toml  recipe.py  setup.sh  speedrun.sh  train.py  train_local.py  wendy.json
bench/: README.md  bench_genesis.py  bench_mjx.py  bench_ours.py  bench_warp.py
deploy/: README.md  deploy_g1.py
deploy/g1-vision-follow/: README.md  live_g1_follow_dry_run.py  run_dry_run.sh
patches/: pufferlib-g1-sim2real.patch
scripts/: check_spark.py  create_twitter_policy_video.py  detect_real_g1_people_yolo.py  g1_perception_sim.py  live_g1_depth_dashboard.py  live_g1_follow_dashboard.py  live_g1_foxglove_bridge.py  live_g1_mujoco_command_preview.py  mirror_latest_checkpoint.py  nanog1_output_summary.py  organize_run_artifacts.py  progress_watchdog_check.py  record_demo_video.sh  record_pushed_demo_video.sh  render_visual_command_follow_video.py  replay_real_g1_camera_policy.py  run_visual_command_training.sh  spark_entrypoint.sh  test_mirror_latest_checkpoint.py  test_progress_watchdog_check.py  test_train_local_parsing.py  train_visual_command_policy.py  view_g1_policy_home_pose.py  visual_command_status.py
tools/: dump_g1_meshes.py  dump_host_consts.py  extract_g1_model.py
web/: build_demo.sh  g1_demo.c  g1_host.c  g1_model_const.h  shell.html
web/api/: views.js
